work on gradient button bug when on tablet and mobile

--- a/style.css
+++ b/style.css
@@ -543,7 +543,7 @@ footer .copyright {
 
   .navbar a {
     display: block;
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin: 3rem;
     color: var(--charcoal);
   }
@@ -653,10 +653,6 @@ footer .copyright {
     margin: 1rem auto 0 auto;
   }
 
-  .navbar .gradient-btn {
-    display: none;
-  }
-
   h4 {
     font-size: 2rem;
   }
@@ -664,6 +660,13 @@ footer .copyright {
   p,
   li {
     font-size: 1.4rem;
+  }
+
+  .navbar a {
+    display: block;
+    font-size: 1rem;
+    margin: 2rem;
+    color: var(--charcoal);
   }
 
   .project-card {
